--- a/Contact me.html
+++ b/Contact me.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>My Contacts Details</title>
+    <title>Contact me</title>
   </head>
   <body>
     <h1>MY CONTACT ADDRESS</h1>
